--- a/app/src/main/res/layout/content_detail_product.xml
+++ b/app/src/main/res/layout/content_detail_product.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".detail.DetailProductActivity"
+    tools:context=".presentation.detail.DetailProductActivity"
     android:layout_marginTop="16dp"
     tools:showIn="@layout/activity_detail_product">
 
