--- a/app/src/main/res/layout/content_detail_product.xml
+++ b/app/src/main/res/layout/content_detail_product.xml
@@ -9,11 +9,95 @@
     android:layout_marginTop="16dp"
     tools:showIn="@layout/activity_detail_product">
 
-    <TextView
-        android:id="@+id/tv_detail_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/text_subtitle" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical">
+
+       <TextView
+           android:id="@+id/tv_detail_description"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_margin="@dimen/text_margin"
+           android:text="@string/text_subtitle" />
+
+       <TextView
+           android:id="@+id/tv_tt_brand"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="@dimen/text_margin"
+           android:text="@string/brand_of_product"
+           android:textStyle="italic"
+           android:lineSpacingMultiplier="1.25"/>
+
+       <TextView
+           android:id="@+id/tv_brand"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textStyle="bold"
+           android:layout_marginHorizontal="@dimen/text_margin"
+           android:text="@string/text_subtitle"
+           android:lineSpacingMultiplier="1.25"/>
+
+       <TextView
+           android:id="@+id/tv_tt_category"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="@dimen/text_margin"
+           android:layout_marginHorizontal="@dimen/text_margin"
+           android:text="@string/category"
+           android:textStyle="italic"
+           android:lineSpacingMultiplier="1.25"/>
+
+       <TextView
+           android:id="@+id/tv_category"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textStyle="bold"
+           android:layout_marginHorizontal="@dimen/text_margin"
+           android:text="@string/text_subtitle"
+           android:lineSpacingMultiplier="1.25"/>
+
+       <TextView
+           android:id="@+id/tv_price"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_margin="@dimen/text_margin"
+           android:text="@string/text_subtitle"
+           android:lineSpacingMultiplier="1.25"
+           android:drawableStart="@drawable/ic_price_24"
+           android:drawablePadding="@dimen/text_margin"/>
+
+       <TextView
+           android:id="@+id/tv_discount"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_margin="@dimen/text_margin"
+           android:text="@string/text_subtitle"
+           android:lineSpacingMultiplier="1.25"
+           android:drawableStart="@drawable/ic_discount_24"
+           android:drawablePadding="@dimen/text_margin"/>
+
+       <TextView
+           android:id="@+id/tv_rating"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_margin="@dimen/text_margin"
+           android:text="@string/text_subtitle"
+           android:lineSpacingMultiplier="1.25"
+           android:drawableStart="@drawable/ic_star_24"
+           android:drawablePadding="@dimen/text_margin"/>
+
+       <TextView
+           android:id="@+id/tv_stock"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_margin="@dimen/text_margin"
+           android:text="@string/text_subtitle"
+           android:lineSpacingMultiplier="1.25"
+           android:drawableStart="@drawable/ic_stock_24"
+           android:drawablePadding="@dimen/text_margin"/>
+
+   </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
