--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,12 +9,12 @@
             android:icon="@drawable/ic_home"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_favorite"
-            android:icon="@drawable/ic_favorite_black"
-            android:title="@string/menu_favorite" />
+            android:id="@+id/nav_search"
+            android:icon="@drawable/ic_search_24"
+            android:title="@string/menu_search" />
         <item
-            android:id="@+id/nav_map"
-            android:icon="@drawable/ic_map"
-            android:title="@string/menu_map" />
+            android:id="@+id/nav_info"
+            android:icon="@drawable/ic_info_24"
+            android:title="@string/menu_info" />
     </group>
 </menu>
