--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -32,7 +32,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/side_nav_bar" />
+                    android:src="@drawable/side_nav_bar"
+                    android:contentDescription="@string/image_description" />
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
