--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -72,65 +72,65 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/text_margin"
-                            android:drawableStart="@drawable/ic_email_24"
                             android:drawablePadding="12dp"
                             android:text="@string/my_email"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="@id/tv_name"
-                            app:layout_constraintTop_toBottomOf="@id/tv_name" />
+                            app:layout_constraintTop_toBottomOf="@id/tv_name"
+                            app:drawableStartCompat="@drawable/ic_email_24" />
 
                         <TextView
                             android:id="@+id/tv_location"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/size_12"
-                            android:drawableStart="@drawable/ic_location_24"
                             android:drawablePadding="12dp"
                             android:text="@string/my_address"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="@id/tv_email"
-                            app:layout_constraintTop_toBottomOf="@id/tv_email" />
+                            app:layout_constraintTop_toBottomOf="@id/tv_email"
+                            app:drawableStartCompat="@drawable/ic_location_24" />
 
                         <TextView
                             android:id="@+id/tv_instagram"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/size_12"
-                            android:drawableStart="@drawable/instagram"
                             android:drawablePadding="12dp"
                             android:text="@string/my_instagram"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="@id/tv_location"
-                            app:layout_constraintTop_toBottomOf="@id/tv_location" />
+                            app:layout_constraintTop_toBottomOf="@id/tv_location"
+                            app:drawableStartCompat="@drawable/instagram" />
 
                         <TextView
                             android:id="@+id/tv_linkedin"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/size_12"
-                            android:drawableStart="@drawable/linkedin"
                             android:drawablePadding="12dp"
                             android:text="@string/my_linkedin"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="@id/tv_instagram"
-                            app:layout_constraintTop_toBottomOf="@id/tv_instagram" />
+                            app:layout_constraintTop_toBottomOf="@id/tv_instagram"
+                            app:drawableStartCompat="@drawable/linkedin" />
 
                         <TextView
                             android:id="@+id/tv_github"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/size_12"
-                            android:drawableStart="@drawable/github"
                             android:drawablePadding="12dp"
                             android:text="@string/my_github"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="@id/tv_linkedin"
-                            app:layout_constraintTop_toBottomOf="@id/tv_linkedin" />
+                            app:layout_constraintTop_toBottomOf="@id/tv_linkedin"
+                            app:drawableStartCompat="@drawable/github" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
